tests/src/frontend/syntax/invalid/lvalue_in_type_annotated.sk
fun main(): String{
  (x.!y : String)
}
